--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
 @import-normalize; /* bring in normalize.css styles */
 
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&display=swap');
+
+
+:root {
+  --primariColor: #121417;
+  --primariArticleColor: #3470FF;
+  }
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,3 +22,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+* {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  border: none;
+}
+
+img {
+   display: block;
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+}
+
+svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+
+}
+
+p, .titel {
+  margin: 0;
+  padding: 0;
+
+  font-family: Manrope;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+
+  color: var(--primariColor);
+
+}
+
+p > span {
+  color: var(--primariArticleColor);
+}
+
+.conteiner {
+  display: block;
+  width: 1440px;
+
+  margin-right: auto;
+  margin-left: auto;
+
+  padding: 0 128px ;
+
+}
+
+
