--- a/src/components/CardItem/CardItem.module.scss
+++ b/src/components/CardItem/CardItem.module.scss
@@ -1,6 +1,6 @@
 .card {
     display: block;
-    max-width: 274px;
+    width: 274px;
     // height: 426px;
 
     border-radius: 14px;
@@ -20,6 +20,8 @@
         position: absolute;
         top: 14px;
         right: 14px;
+
+        cursor: pointer;
 
         & svg {
             width: 18px;
@@ -67,4 +69,10 @@
     border-radius: 12px;
     background-color: #3470FF;
     color: #fff;
+
+    cursor: pointer;
+
+    &:hover, &:focus {
+        background-color:  #0B44CD;
+    }
 }
