--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 @import-normalize; /* bring in normalize.css styles */
 
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600&family=Montserrat&display=swap');
 
 :root {
   --primariColor: #121417;
@@ -73,8 +72,9 @@ p > span {
   display: block;
   width: 1440px;
 
-  margin-right: auto;
-  margin-left: auto;
+  /* margin-right: auto;
+  margin-left: auto; */
+  margin: 50px auto;
 
   padding: 0 128px ;
 
