--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,7 @@ p > span {
 
   /* margin-right: auto;
   margin-left: auto; */
-  margin: 50px auto;
+  margin: 20px auto 40px;
 
   padding: 0 128px ;
 
