--- a/src/components/CarsList/CarsList.module.scss
+++ b/src/components/CarsList/CarsList.module.scss
@@ -3,9 +3,10 @@
     flex-wrap: wrap;
     gap: 50px 29px;
 
-    width: 100%;
-
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 50px;
+
 }
 
 .buttonLoad {
